[gd_scene load_steps=9 format=3 uid="uid://ba6xnfstclqbv"]

[ext_resource type="Script" path="res://Scenes/GLOBAL_SCENE_MANAGER/scripts/global_scene_manager.gd" id="1_6gix0"]
[ext_resource type="Script" path="res://Scenes/GLOBAL_SCENE_MANAGER/scripts/multiplayer_handler.gd" id="2_784jr"]
[ext_resource type="PackedScene" uid="uid://c6uwyusdwgn51" path="res://Scenes/GLOBAL_SCENE_MANAGER/Screen_Bounds.tscn" id="2_h2cpf"]
[ext_resource type="AudioStream" uid="uid://8hcgpv4amdo3" path="res://Sounds/Sound_Effects/SE_Hit1.wav" id="6_6gnvb"]
[ext_resource type="PackedScene" uid="uid://cdve04xju573h" path="res://Scenes/Menues/Pause/Pause.tscn" id="6_neh6m"]
[ext_resource type="PackedScene" uid="uid://cjapii1suvnye" path="res://Scenes/Menues/Settings/Settings.tscn" id="7_pmbqi"]

[sub_resource type="Gradient" id="Gradient_lw8vh"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_201bi"]
gradient = SubResource("Gradient_lw8vh")
width = 1280
height = 800
fill_to = Vector2(0.00854701, 0.0042735)

[node name="Global_Scene_Manager" type="Node"]
script = ExtResource("1_6gix0")

[node name="Multiplayer_Handler" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_784jr")

[node name="Global_Control_Node" type="Control" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 384.0
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 1

[node name="Global_Players_Node" type="Node2D" parent="."]

[node name="Global_Enemies_Node" type="Node2D" parent="."]

[node name="Global_Lighting" type="Node2D" parent="."]

[node name="Global_Light" type="PointLight2D" parent="Global_Lighting"]
light_mask = 5
visibility_layer = 5
color = Color(1, 0.392157, 0.392157, 1)
shadow_enabled = true
shadow_item_cull_mask = 2
texture = SubResource("GradientTexture2D_201bi")
offset = Vector2(640, 360)

[node name="ScreenBounds" parent="." instance=ExtResource("2_h2cpf")]

[node name="Global_Enemy_Projectiles" type="Node" parent="."]

[node name="Pause_Menu" parent="." instance=ExtResource("6_neh6m")]
visible = false

[node name="Settings" parent="." instance=ExtResource("7_pmbqi")]
visible = false

[node name="Global_Hit_Sound_Effects_Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6gnvb")
max_polyphony = 10
bus = &"SFX"

[node name="Gobal_Music_Player" type="AudioStreamPlayer" parent="."]
max_polyphony = 2
bus = &"Music"
